--- a/styles/globals.css
+++ b/styles/globals.css
@@ -102,3 +102,8 @@ ul[data-type="taskList"] li[data-checked="true"] > div > p {
   text-decoration: line-through;
   text-decoration-thickness: 2px;
 }
+
+.rdt input {
+  border: none;
+  padding: 0;
+}
