--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,16 @@
   }
 }
 
+@layer components {
+  .btn {
+    @apply inline-flex justify-center items-center gap-3 px-4 py-2.5 rounded-[28px]
+      bg-primary text-white
+      hover:bg-accent hover:shadow-xl hover:translate-y-0.5
+      transition duration-300 ease-in-out
+      text-center font-semibold uppercase text-sm tracking-[0.08em] no-underline;
+  }
+}
+
 .ProseMirror .is-editor-empty:first-child::before {
   content: attr(data-placeholder);
   float: left;
